--- a/www/templates/tab-articles.html
+++ b/www/templates/tab-articles.html
@@ -1,29 +1,29 @@
 <ion-view view-title="מאמרים">
   <ion-content>
     <div class="row article-row">
-      <div class="col" style="text-align: center">
+      <div class="col" style="text-align: center" ng-click="article.goto('rak')">
         <img src="resources/cat_alle.png" alt=""/>
         <p>?למה עלה ירוק</p>
       </div>
-      <div class="col" style="text-align: center">
+      <div class="col" style="text-align: center" ng-click="article.goto('reasons')">
         <img src="resources/cat_canabiss.png" alt=""/>
-        <p>?למה קנביס</p>
+        <p>?למה לשנות</p>
       </div>
     </div>
     <div class="row article-row">
-      <div class="col" style="text-align: center">
+      <div class="col" style="text-align: center" ng-click="article.href('https://www.youtube.com/watch?v=WIrBhF6ardY')">
         <img src="resources/cat_together.png" alt=""/>
-        <p>עניין חברתי</p>
+        <p>רשימת המפלגה לכנסת</p>
       </div>
-      <div class="col" style="text-align: center">
-        <img src="resources/cat_law.png" alt=""/>
-        <p>חוק וסדר</p>
+      <div class="col" style="text-align: center" ng-click="article.goto('objections')">
+        <img src="resources/simansiman.png" alt=""/>
+        <p>תשובות למתלבטים</p>
       </div>
     </div>
     <div class="row article-row">
-      <div class="col" style="text-align: center">
+      <div class="col" style="text-align: center" ng-click="article.goto('msg')">
         <img src="resources/cat_propaganda.png" alt=""/>
-        <p>פעולים למעננו</p>
+        <p>פועלים למעננו</p>
       </div>
       <div class="col" style="text-align: center">
         <img src="resources/cat_kalfi.png" alt=""/>
