--- a/www/templates/tab-weekly.html
+++ b/www/templates/tab-weekly.html
@@ -15,11 +15,11 @@
           משימות יום יומיות עם שפך הנילוס אל גדות אלכסנדריה לא ממש רואים את הסוף
         </div>
       </ion-item>
-      <ion-item class="item" ng-repeat="task in weekly.tasks" type="item-text-wrap" ng-click="weekly.done(task.id)">
+      <ion-item class="item" ng-repeat="task in weekly.tasks.tasks" type="item-text-wrap" ng-click="weekly.done(task.id)">
       <span ng-class="{ 'ale-checkedbox': task.done, 'ale-checkbox': !task.done }"></span>
       <div>
-        <span ng-class="{ taskDone: task.done }">{{task.title}}</span><br/>
-        <span>({{task.points}} נקודות)</span>
+        <span style="white-space: pre-wrap" ng-class="{ taskDone: task.done }">{{task.title}}</span><br/>
+        <span>({{task.points}} קולות)</span>
       </div>
       </ion-item>
     </ion-list>
