change the top sentence in every tab. add pop up to pop on the first time you visit the app.

--- a/www/templates/tab-daily.html
+++ b/www/templates/tab-daily.html
@@ -12,7 +12,7 @@
       <ion-item class="first-item">
         <span class="ale-daily"></span>
         <div>
-          משימות יום יומיות עם שפך הנילוס אל גדות אלכסנדריה לא ממש רואים את הסוף
+            דבר גדול הוא צירוף של הרבה דברים קטנים. אם כל יום, הרבה אנשים יעשו דברים קטנים - ביחד זה מצטבר לדבר גדול.
         </div>
       </ion-item>
       <ion-item class="item" ng-repeat="task in daily.tasks.tasks" type="item-text-wrap" ng-click="daily.done(task.id)">
