--- a/www/templates/tab-oneTime.html
+++ b/www/templates/tab-oneTime.html
@@ -12,7 +12,7 @@
       <ion-item class="first-item">
         <span class="ale-once"></span>
         <div>
-          משימות יום יומיות עם שפך הנילוס אל גדות אלכסנדריה לא ממש רואים את הסוף
+            רוצים לעמוד בצד הנכון של ההיסטוריה ולעולם לא להתחרט? התחילו כאן
         </div>
       </ion-item>
       <ion-item class="item" ng-repeat="task in onceTime.tasks" type="item-text-wrap" ng-click="onceTime.done(task.id)">
