--- a/www/templates/tab-weekly.html
+++ b/www/templates/tab-weekly.html
@@ -12,7 +12,7 @@
       <ion-item class="first-item">
         <span class="ale-weekly"></span>
         <div>
-          משימות יום יומיות עם שפך הנילוס אל גדות אלכסנדריה לא ממש רואים את הסוף
+            בהתחלה הם מתעלמים ממך. אחר כך הם צוחקים עליך. אחר כך הם תוקפים אותך ואז אתה מנצח.
         </div>
       </ion-item>
       <ion-item class="item" ng-repeat="task in weekly.tasks.tasks" type="item-text-wrap" ng-click="weekly.done(task.id)">
