--- a/www/templates/tab-articles.html
+++ b/www/templates/tab-articles.html
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="row article-row">
-      <div class="col" style="text-align: center" ng-click="article.href('https://www.youtube.com/watch?v=WIrBhF6ardY')">
+      <div class="col" style="text-align: center" ng-click="article.href('http://aleyarok.org.il/candidates.html')">
         <img src="resources/cat_together.png" alt=""/>
         <p>רשימת המפלגה לכנסת</p>
       </div>
@@ -25,7 +25,7 @@
         <img src="resources/cat_propaganda.png" alt=""/>
         <p>פועלים למעננו</p>
       </div>
-      <div class="col" style="text-align: center">
+      <div class="col" style="text-align: center" ng-click="article.href('http://aleyarok.org.il/download.html')">
         <img src="resources/cat_kalfi.png" alt=""/>
         <p>תוצאות הקלפי</p>
       </div>
